[B]Retrospect v5.4.6 - Changelog - 2021-08-18[/B]

_TBD_

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: Issue with empty folders in main TV4 listings.
* Fixed: Omroep Brabant broke due to back end changes.
* Fixed: Radio 538 live streams (Fixes #1548).